--- a/quiz-service/package.json
+++ b/quiz-service/package.json
@@ -1,6 +1,17 @@
 {
+  "scripts": {
+    "dev": "tsx src/index.ts",
+    "test:quiz": "tsx --env-file=.env src/test-pipeline.ts",
+    "build": "tsc",
+    "start": "node dist/index.js"
+  },
   "dependencies": {
     "@google-cloud/video-intelligence": "^6.2.1",
-    "@google/generative-ai": "^0.24.1"
+    "@google/generative-ai": "^0.24.1",
+    "dotenv": "^17.2.3"
+  },
+  "devDependencies": {
+    "@types/node": "^25.0.6",
+    "tsx": "^4.21.0"
   }
 }
