--- a/quiz-service/package.json
+++ b/quiz-service/package.json
@@ -7,11 +7,12 @@
   },
   "dependencies": {
     "@google-cloud/video-intelligence": "^6.2.1",
+    "@google/genai": "^1.36.0",
     "@google/generative-ai": "^0.24.1",
     "dotenv": "^17.2.3"
   },
   "devDependencies": {
-    "@types/node": "^25.0.6",
+    "@types/node": "^25.0.8",
     "tsx": "^4.21.0"
   }
 }
