--- a/quiz-service/package.json
+++ b/quiz-service/package.json
@@ -9,7 +9,8 @@
     "@google-cloud/video-intelligence": "^6.2.1",
     "@google/genai": "^1.36.0",
     "@google/generative-ai": "^0.24.1",
-    "dotenv": "^17.2.3"
+    "dotenv": "^17.2.3",
+    "express": "^5.2.1"
   },
   "devDependencies": {
     "@types/node": "^25.0.8",
